--- a/public/mdb/css/i.styles.css
+++ b/public/mdb/css/i.styles.css
@@ -68,7 +68,7 @@ a.sidenav-link:hover {
 }
 
 .bg-dark-3 {
-	background-color: var(--dark-3);
+	background-color: var(--dark-3) !important;
 }
 
 .bg-grey-1 {
